Added Github rep link

--- a/index.html
+++ b/index.html
@@ -341,6 +341,14 @@
       <div class="row">
         <div class="col-md-5">
           <h5>Artwork and Web-dev by Mot Hakimi 𓅓</h5>
+          <p>
+            Open-source Project Available on
+            <a
+              href="https://github.com/Motiche/Aerial-Insectivores"
+              style="color: blue"
+              >Github <i class="fa fa-github"></i
+            ></a>
+          </p>
           <hr />
           <div class="row">
             <div class="col-6">
