Contact us works (probably!)

--- a/index.html
+++ b/index.html
@@ -389,29 +389,32 @@
           </ul>
         </div>
         <div class="col-md-5">
-          <h5 class="text-md-right">Contact Us</h5>
+          <h5 class="text-md-right">Contact Us <i class="fa fa-envelope"></i></h5>
           <form
             action="https://formsubmit.co/exister72@gmail.com"
             method="POST"
           >
-            <fieldset class="form-group">
-              <input
-                type="email"
-                class="form-control"
-                id="exampleInputEmail1"
-                placeholder="Enter email"
-              />
-            </fieldset>
-            <fieldset class="form-group pt-1">
-              <textarea
-                class="form-control"
-                id="exampleMessage"
-                placeholder="Message"
-                required
-              ></textarea>
-            </fieldset>
-            <fieldset class="form-group text-xs-right">
-              <button type="button" class="btn btn-secondary btn-md mt-1">
+          <input
+              type="name"
+              class="form-control"
+              id="exampleInputEmail1"
+              placeholder="Enter Name"
+            />
+            <input
+              type="email"
+              class="form-control mt-1"
+              id="exampleInputEmail1"
+              placeholder="Enter Email"
+            />
+
+            <input
+              class="form-control mt-1"
+              id="exampleMessage"
+              placeholder="Message"
+              style="height:100px;"
+              required
+            />
+              <button type="submit" class="btn btn-primary btn-md mt-1">
                 Send
               </button>
             </fieldset>
