Contact section is working for real!

--- a/index.html
+++ b/index.html
@@ -395,13 +395,15 @@
             method="POST"
           >
           <input
-              type="name"
+              type="text"
+              name="name" 
               class="form-control"
               id="exampleInputEmail1"
               placeholder="Enter Name"
             />
             <input
               type="email"
+              name="email" 
               class="form-control mt-1"
               id="exampleInputEmail1"
               placeholder="Enter Email"
@@ -410,6 +412,7 @@
             <input
               class="form-control mt-1"
               id="exampleMessage"
+              name="message"
               placeholder="Message"
               style="height:100px;"
               required
