added contact nav

--- a/About.html
+++ b/About.html
@@ -99,6 +99,7 @@ action to address these issues and protect the populations of aerial insectivore
         </div>
       </div>
     </main>
+    <div id="Contact"></div>
     <footer-component></footer-component>
   </body>
 </html>
