--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@
       </div>
       <!--Birds cards end-->
     </main>
+    <div id="Contact"></div>
     <footer-component></footer-component>
   </body>
 </html>
