--- a/temp.html
+++ b/temp.html
@@ -26,6 +26,7 @@
   <body>
     <header-component></header-component>
     <main></main>
+    <div id="Contact"></div>
     <footer-component></footer-component>
   </body>
 </html>
