made it more SEO friendly

--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
         <img
           class="d-none d-md-block"
           src="images/banner-sky-desk.png"
-          alt=""
+          title="Banner of a barn swallow above iran map"
+          alt="barn swallow"
           style="padding-left: 0px; padding-right: 0px; width: 100%"
         />
         <img
           class="d-md-none"
           src="images/banner-mobile.png"
-          alt=""
+          alt="barn swallow"
+          title="Banner of a barn swallow above iran map"
           style="padding-left: 0px; padding-right: 0px; width: 100%"
         />
       </div>
@@ -115,7 +117,7 @@
               <img
                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/42/Common_Swift_%28Apus_apus%29_%2842715255405%29.jpg/800px-Common_Swift_%28Apus_apus%29_%2842715255405%29.jpg"
                 class="card-img-left m-4 rounded"
-                alt="..."
+                alt="a sommon swift flying"
               />
             </div>
             <div class="col-md-8">
@@ -146,7 +148,7 @@
               <img
                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/Barn_Swallow_flight_by_Dr._Raju_Kasambe_DSC_8068_%281%29.jpg/800px-Barn_Swallow_flight_by_Dr._Raju_Kasambe_DSC_8068_%281%29.jpg"
                 class="card-img-left m-4 rounded"
-                alt="..."
+                alt="a barn swallow flying"
               />
             </div>
             <div class="col-md-8">
@@ -176,7 +178,7 @@
               <img
                 src="https://upload.wikimedia.org/wikipedia/commons/3/30/Swallow_flying_drinking_2.jpg"
                 class="card-img-left m-4 rounded"
-                alt="..."
+                alt="a mrting bird drinking"
               />
             </div>
             <div class="col-md-8">
@@ -207,7 +209,7 @@
               <img
                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Merops_apiaster_04.jpg/676px-Merops_apiaster_04.jpg"
                 class="card-img-left m-4 rounded"
-                alt="..."
+                alt="two europian bee-eaters"
               />
             </div>
             <div class="col-md-8">
@@ -238,7 +240,7 @@
               <img
                 src="https://upload.wikimedia.org/wikipedia/commons/b/b6/Kirjosieppo.jpg"
                 class="card-img-left m-4 rounded"
-                alt="..."
+                alt="a flycatcher perching on a twig"
               />
             </div>
             <div class="col-md-8">
@@ -269,7 +271,7 @@
               <img
                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bb/Garden_Warbler%2C_UNESCO_Biosphere_Reserve_Swabian_Alb%2C_Germany.jpg/800px-Garden_Warbler%2C_UNESCO_Biosphere_Reserve_Swabian_Alb%2C_Germany.jpg"
                 class="card-img-left m-4 rounded"
-                alt="..."
+                alt="a warbler perching on a blooming tree"
               />
             </div>
             <div class="col-md-8">
