--- a/About.html
+++ b/About.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Arial Insectivores of Iran</title>
-    <meta name="description" content="Arial Insectivores of Iran" />
+    <title>NGO for conserving Arial Insectivores of Iran sky</title>
+    <meta name="description" content="NGO for conserving Arial Insectivores of Iran sky tries to adress the issue of declineing these magnificant birds" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -33,7 +33,8 @@
         <div class="row">
           <div class="info col-md m-3 bg-transparent">
             <img src="images/banner-mobile.png"
-            style="max-width:100%;max-height:100%">
+            style="max-width:100%;max-height:100%"
+            title="Banner of a barn swallow above iran map">
 <br>
 <br>
 <h4>Mission of this website</h4>
