--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Arial Insectivores of Iran</title>
-    <meta name="description" content="Arial Insectivores of Iran" />
+    <title>NGO for conserving Arial Insectivores of Iran sky</title>
+    <meta
+      name="description"
+      content="NGO for conserving Arial Insectivores of Iran sky tries to adress the issue of declineing these magnificant birds"
+    />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
