--- a/About.html
+++ b/About.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>NGO for conserving Arial Insectivores of Iran sky</title>
+    <title>About NGO for conserving Arial Insectivores of Iran sky</title>
     <meta name="description" content="NGO for conserving Arial Insectivores of Iran sky tries to adress the issue of declineing these magnificant birds" />
     <link rel="stylesheet" href="style.css" />
     <link
@@ -34,7 +34,8 @@
           <div class="info col-md m-3 bg-transparent">
             <img src="images/banner-mobile.png"
             style="max-width:100%;max-height:100%"
-            title="Banner of a barn swallow above iran map">
+            title="Banner of a barn swallow above iran map"
+            class="rounded-3">
 <br>
 <br>
 <h4>Mission of this website</h4>
